# llm-asset-market-herding

./: .env.example  .gitignore  DEVLOG.md  GIT_SAVE_INSTRUCTIONS.md  README.md  README_CEF_DATA.md  pyproject.toml
BST_peliminary_analysis/: CEF_analysis.py  data_exploration.py
analysis/: aggregate_runs.py  check_duplicates.py  debug_volatility.py  metrics.py  plot_selected_runs.py  plots.py  plots_aggregated.py  plots_variances.py  runs_config.json  statistical_tests.py  volatility_deep_dive.py
data/: README.md
plots/: statistical_comparisons.csv
src/: __init__.py  agent.py  config.py  data_loader.py  market.py  simulation.py
tests/: test_market.py
